v9.6
+ Now when typing /info it will tell you how many times the player has been kicked.
+ Now when typing /info it will tell you when the player first joined the server.
+ Now when typing /info it will tell you when the player was last seen.
+ Data for /info is now stored in a file, so you can check player info on offline players!!!
* Organized files into folders.
* Files were added.
* A new file is created called PlayerData, which tracks data of players,  starting when they first log on.
* Changed alot of code in the main.
* Fixed error with /ea
* Fixed error with /0, /1, and /2

v9.5
+ Added /tpto command! Tp to coordinates!
+ Added /quit command! Type /quit then some words to have a custon quit message!
* Fixed error in /kick.
* Fixed error in /ban.
* Fixed error in /tp.
* Fixed error in /summon
* Nolonger shows the default quit/exit message when executing /kick, /ban, /kickall, or /quit.

v9.4
+ Added /item command! Give yourself any item! And you can specify the amount!
+ Added /give command! Give any player any amount of any item!
+ Added /hat command! Make what your holding your head!
+ Added /mute command! Mute a player from talking!
+ Added /unmute command! Unmutes a player!
+ Added /exp Command!(or /level, or /xp) Give players exp!
+ Added /world command! Teleport between worlds!
+ Added /ping command! Pong!
+ Added /workbench command!(or /bench) open a workbench without having one!
* A new file will be created called MutedPlayers.txt
* Fixed errors.

v9.3
* Fixed new bugs with new commands.
* Fixed misspellings.
* Changed some colors with new commands.

v9.2
+ Added /home command. Teleport to your home.
+ Added /sethome command! set your home where your standing.
+ Added warp command! warp to a specified warp.
+ Added setwarp command! Create a warp!
+ Added delwarp commands! delete a specified warp!
+ Added kickall command! kick everyone except you!
+ Added kill command! kill a specified player!